--- a/MvcBox/Views/Shared/_LoginPartial.cshtml
+++ b/MvcBox/Views/Shared/_LoginPartial.cshtml
@@ -11,20 +11,20 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body style="background-image: url(back.jpg);">
-    <header id="navigation" class="border-bottom box-shadow">
+    <header id="navigation">
 
         @*<div class="navbar-header">
-                         responsive nav button
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-            </button>
-                         /responsive nav button
-                         logo
-                         /logo
-                    </div>*@
+                     responsive nav button
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+        </button>
+                     /responsive nav button
+                     logo
+                     /logo
+                </div>*@
 
         <!-- main nav -->
-        <nav class="navbar-expand-lg navbar-right" role="navigation">
+        @*<nav class="navbar-expand-lg navbar-right" role="navigation">
             <div class="container">
                 <div class="navbar-brand">
                     <a asp-controller="Home" asp-action="Index"><img src="~/img/log.jpg" class="img-fluid" height="40" width="164" alt=""></a>
@@ -45,7 +45,85 @@
                     </ul>
                 </div>
             </div>
+        </nav>*@
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow border-bottom-0 mb-3">
+            <div class="container">
+                <a asp-controller="Home" asp-action="Index"><img src="~/img/log.jpg" class="img-fluid" height="40" width="164" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav justify-content-end">
+                        <!-- Nav Item - User Information -->
+                        <li class="nav-item dropdown no-arrow justify-content-end">
+                            <a class="nav-link dropdown-toggle justify-content-end" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="mr-2 text-gray-600">Дарья Яковлева</span>
+                                <img class="img-profile rounded-circle" src="http://psoriazinfo.com/default-user.jpg">
+                            </a>
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Profile
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Settings
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Activity Log
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item">
+                                    <form class="form-inline" method="post" asp-controller="Account" asp-action="LogOff">
+                                        <button type="submit" class="btn btn-success btn-sm active">Выход</button>
+                                    </form>
+                                </a>
+
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+        @*<!-- Nav Item - User Information -->
+        <li class="nav-item dropdown no-arrow justify-content-end">
+            <a class="nav-link dropdown-toggle justify-content-end" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+            </a>
+            <!-- Dropdown - User Information -->
+            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                <a class="dropdown-item" href="#">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Profile
+                </a>
+                <a class="dropdown-item" href="#">
+                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Settings
+                </a>
+                <a class="dropdown-item" href="#">
+                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Activity Log
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Logout
+                </a>
+            </div>
+        </li>*@
+
         <!-- /main nav -->
     </header>
 
