--- a/MvcBox/Views/Shared/_Layout.cshtml
+++ b/MvcBox/Views/Shared/_Layout.cshtml
@@ -119,6 +119,7 @@
                             <div class="buttons">
                                 <a href="#" data-toggle="modal" data-target="#register" class="btn btn-learn">Зарегистрироваться</a>
                                 <a href="#" data-toggle="modal" data-target="#login" class="btn btn-learn">Войти</a>
+                                <a class="btn-dowload-app btn btn-learn" href="~/download/GeoGeometry.GeoGeometry.apk">Загрузить приложение</a>
                             </div>
                         </div>
                     </div>
