--- a/MvcBox/Views/Shared/_Layout.cshtml
+++ b/MvcBox/Views/Shared/_Layout.cshtml
@@ -55,15 +55,83 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        
+        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 </head>
 <body>
+    <header>
 
-    
+        @*<div class="navbar-header">
+                         responsive nav button
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+            </button>
+                         /responsive nav button
+                         logo
+                         /logo
+                    </div>*@
+
+        <!-- main nav -->
+        @*<nav class="navbar-expand-lg navbar-right" role="navigation">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a asp-controller="Home" asp-action="Index"><img src="~/img/log.jpg" class="img-fluid" height="40" width="164" alt=""></a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                        <ul id="nav" class="nav navbar-nav menu">
+                            <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Index">Привет, @User.Identity.Name!</a></li>
+                            <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Privacy">Политика</a></li>
+                            <li class="nav-item">
+                                <form class="form-inline" method="post" asp-controller="Account" asp-action="LogOff">
+                                    <button type="submit" class="btn btn-success btn-sm active">Выход</button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>*@
+        <nav class="navbar navbar-dark bg-violett navbar-expand-lg navbar-left" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">SmartBox</a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-sm-inline-flex flex-sm-row" id="navbarItems">
+                    <ul class="navbar-nav nav-fill nav-pills d-sm-inline-flex">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Calculator">Калькулятор</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Mobile">Мобильная версия</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Auth"><span class="glyphicon glyphicon-user">Личный кабинет</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main role="main">
+        @RenderBody()
+    </main>           
         
-            @RenderBody()
-        
-    
+
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
